--- a/FrontEnd/src/components/Home/MiniCalendar/MiniCalendar.css
+++ b/FrontEnd/src/components/Home/MiniCalendar/MiniCalendar.css
@@ -3,7 +3,6 @@
   font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
     "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  margin-top: 10px;
 }
 
 .react-datepicker__header {
@@ -33,6 +32,7 @@
 
 .react-datepicker__navigation-icon {
   height: 5px;
+  margin-top: .05rem;
 }
 
 .react-datepicker__day--selected {
